--- a/mainPage.html
+++ b/mainPage.html
@@ -1,255 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<center>
+<h4><a href="gamebyCategory.html">
+    <btn--otherpages style="font-family:verdana" href="mainPage.css">Best By Genre</btn--otherpages></a> 
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+<a href="canceledGames.html">
+    <btn--otherpages style="font-family:verdana" href="mainPage.css">Canceled Games</btn--otherpages></a> 
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+<a href="upcomingGames.html">
+    <btn--otherpages style="font-family:verdana" href="mainPage.css">Upcoming Games</btn--otherpages></a>
+</h4>
+</center>
+
 <head>
     <meta charset="utf-8">
     <style>
     </style>
     <title>The Philip Hyatt Game of The Year Awards</title>
+    <link rel="stylesheet" href="mainPage.css">
+    <link rel="icon" href="images/icon.png">
 </head>
 
 <body style="font-family:verdana">
     <center><br><br>
-        <h1>The <em>Philip Hyatt</em> Game of The Year Awards</h1>
-        <p><em>This is a list of all my <u>personal</u> favorite games. This is certainly not a list of the greatest,
-                most successful, popular, or polished games of all time. <br> Many of the most popular games are not
-                featured on this list. While I probably played them, they likely just did not scratch that itch for me.
-                <br>No hate to anyone's favorite games. All peace and love.</em></p>
-        <br><br><br>
-        <h4>The Greatest Games (Reverse Chronological Order):</h4>
-
-        <h2><br><br>2023</h2>
-        <a href="https://www.netflix.com/browse">
+        <img src="images/heading.png" height="150"><br>
+        <h1 style=font-size:40px><br>2023</h1>
+        <a href="TBD.html">
             <h4>
-                <link style="font-family:verdana">Winner — To Be Determined </link>
+                <btn--winner style="font-family:verdana">Winner — To Be Determined</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — To Be Determined </link>
+        <a href="TBD.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — To Be Determined</link>
         </a>
 
-        <h2><br><br>2022</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2022</h1>
+        <a href="elderKings2.html">
             <h4>
-                <link style="font-family:verdana">Winner — Elder Kings II</link>
+                <btn--winner style="font-family:verdana">Winner — Elder Kings II</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Call of Duty: Modern Warfare II</link>
+        <a href="tinyTinas.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Tiny Tina's Wonderlands</link>
         </a>
 
-        <h2><br><br>2021</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2021</h1>
+        <a href="chiv2.html">
             <h4>
-                <link style="font-family:verdana">Winner — Halo Infinite</link>
+                <btn--winner style="font-family:verdana">Winner — Chivalry 2</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Chivalry 2</link>
+        <a href="haloInfinite.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Halo Infinite</link>
         </a>
 
-        <h2><br><br>2020</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2020</h1>
+        <a href="retroBowl.html">
             <h4>
-                <link style="font-family:verdana">Winner — Retrobowl</link>
+                <btn--winner style="font-family:verdana">Winner — Retro Bowl</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Call of Duty: Black Ops Cold War</link>
+        <a href="coldWar.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Call of Duty: Black Ops Cold War</link>
         </a>
 
-        <h2><br><br>2019</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2019</h1>
+        <a href="mw2019.html">
             <h4>
-                <link style="font-family:verdana">Winner — Call of Duty: Modern Warfare</link>
+                <btn--winner style="font-family:verdana">Winner — Call of Duty: Modern Warfare</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Mortal Kombat 11</link>
+        <a href="mk11.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Mortal Kombat 11</link>
         </a>
 
-        <h2><br><br>2018</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2018</h1>
+        <a href="bitlife.html">
             <h4>
-                <link style="font-family:verdana">Winner — Bitlife</link>
+                <btn--winner style="font-family:verdana">Winner — BitLife</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Kingdom Come: Deliverance</link>
+        <a href="ufc3.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — EA Sports UFC 3</link>
         </a>
 
-        <h2><br><br>2017</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2017</h1>
+        <a href="shadowofWar.html">
             <h4>
-                <link style="font-family:verdana">Winner — Shadow of War</link>
+                <btn--winner style="font-family:verdana">Winner — Middle-earth: Shadow of War</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Star Wars Battlefront II</link>
+        <a href="battlefront2017.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Star Wars Battlefront II</link>
         </a>
 
-        <h2><br><br>2016</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2016</h1>
+        <a href="mafia3.html">
             <h4>
-                <link style="font-family:verdana">Winner — Mafia III</link>
+                <btn--winner style="font-family:verdana">Winner — Mafia III</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Layers of Fear</link>
+        <a href="layersofFear.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Layers of Fear</link>
         </a>
 
-        <h2><br><br>2015</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2015</h1>
+        <a href="fallout4.html">
             <h4>
-                <link style="font-family:verdana">Winner — Fallout 4</link>
+                <btn--winner style="font-family:verdana">Winner — Fallout 4</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Rocket League</link>
+        <a href="rocketLeague.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Rocket League</link>
         </a>
 
-        <h2><br><br>2014</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2014</h1>
+        <a href="advancedWarfare.html">
             <h4>
-                <link style="font-family:verdana">Winner — Call of Duty: Advanced Warfare</link>
+                <btn--winner style="font-family:verdana">Winner — Call of Duty: Advanced Warfare</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Insurgency</link>
+        <a href="insurgency.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Insurgency</link>
         </a>
 
-        <h2><br><br>2013</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2013</h1>
+        <a href="gtaV.html">
             <h4>
-                <link style="font-family:verdana">Winner — Grand Theft Auto V</link>
+                <btn--winner style="font-family:verdana">Winner — Grand Theft Auto V</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Payday 2</link>
+        <a href="payday2.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Payday 2</link>
         </a>
 
-        <h2><br><br>2012</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2012</h1>
+        <a href="sleepingDogs.html">
             <h4>
-                <link style="font-family:verdana">Winner — Sleeping Dogs</link>
+                <btn--winner style="font-family:verdana">Winner — Sleeping Dogs</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Call of Duty: Black Ops 2</link>
+        <a href="bo2.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Call of Duty: Black Ops 2</link>
         </a>
 
-        <h2><br><br>2011</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2011</h1>
+        <a href="skyrim.html">
             <h4>
-                <link style="font-family:verdana">Winner — The Elder Scrolls IV: Skyrim</link>
+                <btn--winner style="font-family:verdana">Winner — The Elder Scrolls IV: Skyrim</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Minecraft</link>
+        <a href="minecraft.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Minecraft</link>
         </a>
 
-        <h2><br><br>2010</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2010</h1>
+        <a href="haloReach.html">
             <h4>
-                <link style="font-family:verdana">Winner — Fallout: New Vegas</link>
+                <btn--winner style="font-family:verdana">Winner — Halo: Reach</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Halo: Reach</link>
+        <a href="happyWheels.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Happy Wheels</link>
         </a>
 
-        <h2><br><br>2009</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2009</h1>
+        <a href="mw2.html">
             <h4>
-                <link style="font-family:verdana">Winner — Call of Duty: Modern Warfare 2</link>
+                <btn--winner style="font-family:verdana">Winner — Call of Duty: Modern Warfare 2</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — The Sims 3</link>
+        <a href="sims3.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — The Sims 3</link>
         </a>
 
-        <h2><br><br>2008</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2008</h1>
+        <a href="gta4.html">
             <h4>
-                <link style="font-family:verdana">Winner — Grand Theft Auto IV</link>
+                <btn--winner style="font-family:verdana">Winner — Grand Theft Auto IV</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Mario Kart Wii</link>
+        <a href="marioKart.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Mario Kart Wii</link>
         </a>
 
-        <h2><br><br>2007</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2007</h1>
+        <a href="legoTCS.html">
             <h4>
-                <link style="font-family:verdana">Winner — Lego Star Wars: The Complete Saga</link>
+                <btn--winner style="font-family:verdana">Winner — Lego Star Wars: The Complete Saga</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Pirates of the Caribbean Online</link>
+        <a href="potcOnline.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Pirates of the Caribbean Online</link>
         </a>
 
-        <h2><br><br>2006</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2006</h1>
+        <a href="gmod.html">
             <h4>
-                <link style="font-family:verdana">Winner — Garry's Mod</link>
+                <btn--winner style="font-family:verdana">Winner — Garry's Mod</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Roblox</link>
+        <a href="roblox.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Roblox</link>
         </a>
 
-        <h2><br><br>2005</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2005</h1>
+        <a href="battlefront2005.html">
             <h4>
-                <link style="font-family:verdana">Winner — Star Wars Battlefront 2</link>
+                <btn--winner style="font-family:verdana">Winner — Star Wars Battlefront 2</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Call of Duty 2: Big Red One</link>
+        <a href="codBigred1.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Call of Duty 2: Big Red One</link>
         </a>
 
-        <h2><br><br>2004</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2004</h1>
+        <a href="battlefront2004.html">
             <h4>
-                <link style="font-family:verdana">Winner — Star Wars Battlefront</link>
+                <btn--winner style="font-family:verdana">Winner — Star Wars Battlefront</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Zoo Tycoon 2</link>
+        <a href="zooTycoon2.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Zoo Tycoon 2</link>
         </a>
 
-        <h2><br><br>2003</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2003</h1>
+        <a href="riseofNations.html">
             <h4>
-                <link style="font-family:verdana">Winner — Rise of Nations</link>
+                <btn--winner style="font-family:verdana">Winner — Rise of Nations</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — SimCity 4</link>
+        <a href="simCity4.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — SimCity 4</link>
         </a>
 
-        <h2><br><br>2002</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2002</h1>
+        <a href="ageofMythology.html">
             <h4>
-                <link style="font-family:verdana">Winner — Mall Tycoon</link>
+                <btn--winner style="font-family:verdana">Winner — Age of Mythology</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Snowboard Park Tycoon</link>
+        <a href="snowboardTycoon.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Snowboard Park Tycoon</link>
         </a>
 
-        <h2><br><br>2001</h2>
-        <a href="https://www.netflix.com/browse">
+        <h1 style=font-size:40px><br>2001</h1>
+        <a href="gta3.html">
             <h4>
-                <link style="font-family:verdana">Winner — Grand Theft Auto III</link>
+                <btn--winner style="font-family:verdana">Winner — Grand Theft Auto III</link>
             </h4>
         </a>
-        <a href="https://www.netflix.com/browse">
-            <link style="font-family:verdana">Runner Up — Halo: Combat Evolved</link>
+        <a href="haloCE.html">
+            <btn--runnerup style="font-family:verdana">Runner Up — Halo: Combat Evolved</link>
         </a>
-        <br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
 
+            <h4><a href="gamebyCategory.html">
+                <btn--otherpages style="font-family:verdana" href="mainPage.css">Best By Genre</btn--otherpages></a> 
+                &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            <a href="canceledGames.html">
+                <btn--otherpages style="font-family:verdana" href="mainPage.css">Canceled Games</btn--otherpages></a> 
+                &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            <a href="upcomingGames.html">
+                <btn--otherpages style="font-family:verdana" href="mainPage.css">Upcoming Games</btn--otherpages></a>
+            </h4>
+
+        <br>
     </center>
+
 </body>
 
 </html>
